Mon Feb 12 16:07:45 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* run.c, cvs.h: Changed more Popen() to run_popen()

Mon Feb 12 03:06:50 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* release.c, rtag.c, tag.c: changed 'delete' to 'delete_flag'
	to avoid symbol collision with DEC C RTL function delete()

Mon Feb 12 03:01:48 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* mkmodules.c: changed 'void Lock_Cleanup()' to 'void static
	Lock_Cleanup() to avoid conflict with more substantial
	Lock_Cleanup() in lock.c

Mon Feb 12 02:50:19 1996  Benjamin J. Lee  <benjamin@cyclic.com>

	* edit.c, logmsg.c, release.c, run.c: Changed Popen() to
	run_popen().  VMS' linker is not case sensitive and considered
	popen() and Popen() to be identical symbols.

Sun Feb 11 10:51:14 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main) [!CLIENT_SUPPORT]: Silently ignore gzip level
	rather than printing usage message.

	* cvs.h, expand_path.c (variable_list): New variable.
	(variable_set): New function.
	* hash.h (enum ntype), hash.c (nodetypestring): Add VARIABLE.
	* expand_path.c (expand_path, expand_variable): Reindent.
	(expand_variable): Use user variables not environment variables
	for ${=VAR} syntax.  The environment variables didn't work
	client/server.
	* main.c (main): Process new -s global option.
	* client.c (send_variable_proc): New function.
	(start_server): Call it, to send user variables.
	* server.c (serve_set): New function.
	(requests): Add Set request.
	* sanity.sh: Revise info test to use user variables rather than
	environment variables.

Sat Feb 10 16:55:37 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	By itself this is only a small cleanup, but in the long run it
	will be way cool (for reference, it takes CVS's text segment from
	290816 bytes to 294912, which I expect will be made up by future
	changes which this enables):
	* cvs.h (struct file_info): Added.
	(FILEPROC): Replace 5 args with single struct file_info *.